--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,14 @@
 
     <title>{% block title %}Welcome!{% endblock %}</title>
 
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-P92FSBL5');</script>
+<!-- End Google Tag Manager -->
+
     {# CSS global (idéalement via importmap/asset mapper). Laisse ton système actuel. #}
     {% block stylesheets %}
       {# Exemple si tu as un CSS global :
@@ -31,6 +39,10 @@
   </head>
 
   <body data-controller="layout">
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P92FSBL5"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     {# ===== Layout wrapper ===== #}
     <div class="app-shell">
       {% if app.user %}
