--- a/templates/base_auth.html.twig
+++ b/templates/base_auth.html.twig
@@ -6,12 +6,15 @@
     
     <!-- SEO Meta Tags -->
     <title>{% block title %}MykeyNest - Gestionnaire de Mots de Passe Sécurisé{% endblock %}</title>
-    <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-P92FSBL5');</script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RG9YT46TFS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RG9YT46TFS');
+</script>
 <!-- End Google Tag Manager -->
     <meta name="description" content="{% block description %}Sécurisez tous vos mots de passe avec MykeyNest. Chiffrement AES-256, synchronisation multi-appareils, générateur de mots de passe. Essai gratuit.{% endblock %}" />
     <meta name="keywords" content="gestionnaire mot de passe, sécurité, chiffrement AES-256, password manager, MykeyNest" />
@@ -77,10 +80,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </head>
 
   <body>
-  <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P92FSBL5"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
     {% block body %}{% endblock %}
   </body>
 </html>
