--- a/templates/extention/index.html.twig
+++ b/templates/extention/index.html.twig
@@ -985,7 +985,7 @@ color:var(--color-text-dark);
         </div>
       </div>
 
-      <div class="card-body">
+      <div class="card-body" id="app-key">
         <p style="color: var(--color-text-medium); margin-bottom: var(--spacing-lg); line-height: 1.6;">
           {{ 'extension.page.cards.api_key.intro'|trans }}
         </p>
